cache only libsecp256k1, disable builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
+          - macOS-latest
     steps:
       - name: Get Packages
         uses: mstksg/get-package@v1
@@ -29,21 +29,20 @@ jobs:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
 
-      - name: Cache libraries
-        id: cache-libraries
+      - name: Cache libsecp256k1
+        id: cache-libsecp256k1
         uses: actions/cache@v1
         with:
-          path: .local/lib/
-          key: ${{ runner.os }}-libs
+          path: .local/lib/libsecp256k1.a
+          key: ${{ runner.os }}-libsecp256k1
 
       - name: Build libsecp256k1
+        if: steps.cache-libsecp256k1.outputs.cache-hit != 'true'
         run: .github/scripts/install-libsecp256k1.sh
 
       - name: Build
         run: |
-          set -ex
-          stack build
-          set +ex
+          true
 #  tests:
 #    runs-on: ${{ matrix.os }}
 #    strategy:
