switch cache name due to https://github.com/actions/cache/issues/144

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: .github-cache
-          key: ${{ runner.os }}-libs
+          key: ${{ runner.os }}-libs-aslkdjfaslkdfjsalkjflasdkjfalsdkjf
 
       - name: Build Libraries
         run: |
