--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,13 @@ jobs:
         id: cache-libs
         uses: actions/cache@v1
         with:
-          path: .github-cache
-          key: ${{ runner.os }}-libs-aslkdjfaslkdfjsalkjflasdkjfalsdkjf
+          path: ${{ env.HOME }}/.local/lib
+          key: ${{ runner.os }}-libs-alksjgadskjgodsigoaighoaiejgaesojgi
 
       - name: Build Libraries
         run: |
-          .github/scripts/get-cache.sh
           .github/scripts/install-libsecp256k1.sh
           .github/scripts/install-libff.sh
-          .github/scripts/put-cache.sh
         env:
           HOST_OS: ${{ runner.os }}
 
