--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,13 @@ jobs:
       - name: Setup Stack
         uses: mstksg/setup-stack@v1
 
+      - name: Cache Binaries
+        id: cache-libs
+        uses: actions/cache@v1
+        with:
+          path: /home/runner/.local/bin
+          key: ${{ runner.os }}-bins
+
       - name: Cache Libraries
         id: cache-libs
         uses: actions/cache@v1
@@ -43,6 +50,7 @@ jobs:
 
       - name: Build Libraries
         run: |
+          .github/scripts/install-ghr.sh
           .github/scripts/install-libsecp256k1.sh
           .github/scripts/install-libff.sh
         env:
