--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,10 @@ jobs:
         include:
           - os: ubuntu-latest
             apt-get: autoconf automake libtool
+            home: "/home/runner"
           - os: macOS-latest
             brew: autoconf automake libtool
+            home: "/Users/runner"
     steps:
       - name: Get Packages
         uses: mstksg/get-package@v1
@@ -38,20 +40,22 @@ jobs:
         id: cache-bins
         uses: actions/cache@v1
         with:
-          path: /home/runner/.local/bin
-          key: ${{ runner.os }}-bins-aslkdfjsalkdgjldkgj
-
+          path: ${{ matrix.home }}/.local/bin
+          key: ${{ runner.os }}-bins-owginewoignweoignwoib
       - name: Cache Libraries
         id: cache-libs
         uses: actions/cache@v1
         with:
-          path: /home/runner/.local/lib
-          key: ${{ runner.os }}-libs-askdlfjalgkhwoighwoeighweiog
+          path: ${{ matrix.home }}/.local/lib
+          key: ${{ runner.os }}-libs-oighwoeighwoigweoign
 
-      - name: Build Libraries
+      - name: Build Binaries
         run: |
           .github/scripts/install-ghr.sh
           .github/scripts/install-solc.sh
+
+      - name: Build Libraries
+        run: |
           .github/scripts/install-libsecp256k1.sh
           .github/scripts/install-libff.sh
         env:
