--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,8 @@ jobs:
 
       - name: Build
         run: |
-          stack build --ghc-options '-L ~/.local/lib'
+          patch stack.yaml .github/stack.yaml.patch
+          stack build
 #  tests:
 #    runs-on: ${{ matrix.os }}
 #    strategy:
