--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,9 +85,8 @@ jobs:
 
       - name: Build
         run: |
-          export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$HOME/.local/lib"
           # patch stack.yaml .github/stack.yaml.patch
-          stack build
+          stack build --extra-lib-dirs=$HOME/.local/lib
 #  tests:
 #    runs-on: ${{ matrix.os }}
 #    strategy:
